# halftime-lv2

./: .gitignore  CMakeLists.txt  README.md
dpf-plugin/: DistrhoPluginInfo.h  HalftimeDPF.cpp  HalftimePresets.hpp  HalftimeUI.cpp
halftime.lv2/: manifest.ttl
include/: BpmSync.hpp  CompositeSpectralProcessor.hpp  DcBlocker.hpp  FormantShifter.hpp  HalftimePlugin.hpp  ISpectralProcessor.hpp  MorphController.hpp  OlaEngine.hpp  OutputLimiter.hpp  ParamQueue.hpp  ParamSmoother.hpp  PhaseLockProcessor.hpp  PhaseVocoder.hpp  PitchShifter.hpp  SpectralFrame.hpp  SpectralFreeze.hpp  SpectralTilt.hpp  StutterGrid.hpp  SubBassEnhancer.hpp  ThreeBandEQ.hpp  TransientDetector.hpp  TransientLookaheadScheduler.hpp  WindowShapes.hpp
mixxx/: INTEGRATION.md  halftimeeffect.cpp  halftimeeffect.h
src/: plugin.cpp
tests/: CMakeLists.txt  test_composite_processor.cpp  test_lookahead.cpp  test_ola_engine.cpp  test_phase_lock.cpp
